# RAG-RUST-EDITION-

./: .env.example  Cargo.toml  README.md
Documents/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FINE_TUNING_DATASETS.md  IMPLEMENTATION_PLAN.md  RAG_FUNDAMENTALS.md
embedding/: client.rs
rag-pdf-dataset/: .gitignore  Cargo.toml  README.md
rag-pdf-dataset/configs/: app.toml  embedding.toml  qdrant.toml
rag-pdf-dataset/scripts/: ingest.rs
rag-pdf-dataset/src/: main.rs
rag-pdf-dataset/src/config/: mod.rs
rag-pdf-dataset/src/dataset/: mod.rs  schema.rs  writer.rs
rag-pdf-dataset/src/embedding/: batcher.rs  mod.rs
rag-pdf-dataset/src/ingestion/: mod.rs
rag-pdf-dataset/src/rag/: mod.rs  retriever.rs
rag-pdf-dataset/src/types/: metadata.rs
rag-pdf-dataset/src/utils/: errors.rs  mod.rs
rag-pdf-dataset/src/vectorstore/: mod.rs  qdrant.rs
rag-pdf-dataset/tests/: chunking.rs  embedding.rs  retrieval.rs
scripts/: download_model.rs  ingest.rs  rebuild_index.rs
src/: cli.rs  lib.rs
src/config/: loader.rs  mod.rs
src/dataset/: mod.rs  writer.rs
src/embedding/: client.rs  mod.rs
src/ingestion/: book_loader.rs  chunker.rs  cleaner.rs  mod.rs  pdf_loader.rs  tokenizer.rs
src/rag/: mod.rs  prompt.rs  retriever.rs
src/utils/: fs.rs  ids.rs
src/vectorstore/: mod.rs  qdrant.rs
