[package]
name = "rag-pdf-dataset"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"

# PDF processing
pdfium-render = "0.8"

# EPUB processing
epub = "2.1"

# Text processing
unicode-normalization = "0.1"
regex = "1.10"

# Embeddings and vector store
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "ingest"
path = "scripts/ingest.rs"

[[bin]]
name = "rebuild_index"
path = "scripts/rebuild_index.rs"

[[bin]]
name = "download_model"
path = "scripts/download_model.rs"
