[package]
name = "rag-pdf-dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"

# PDF processing
pdfium-render = "0.8"
pdf = "0.9"

# Text processing
unicode-normalization = "0.1"
regex = "1.10"
once_cell = "1.19"

# Embeddings and vector store
qdrant-client = "1.7"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "ingest"
path = "scripts/ingest.rs"

[[bin]]
name = "rebuild_index"
path = "scripts/rebuild_index.rs"
